--- a/src/app/team/team.component.css
+++ b/src/app/team/team.component.css
@@ -4,8 +4,18 @@
 }
 
 .team-container ul {
-  background-color: bisque;
   box-shadow: 0 3px 10px rgba(100, 100, 100, 0.6);
   margin: 0.5rem 0;
   padding: 10px 15px;
+  border-radius: 20px;
+}
+
+@media only screen and (max-width: 400px) {
+  .team-container {
+    text-align: center;
+  }
+  .team-container ul {
+    box-shadow: none;
+    text-align: center;
+  }
 }
